# awslocalstack

./: go.mod  go.sum
cmd/cf/: main.go
cmd/s3/: main.go
cmd/sqs/: main.go
local/: app.py  pyproject.toml
local/local/: local_stack.py
local/tests/unit/: test_local_stack.py
